# python-project-lvl2

./: .coverage  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  pyci.yml
difference_calculator/: gendiff.py
difference_calculator/formaters/: json.py  plain.py  stylish.py
difference_calculator/formatters/: format_diff.py  formatting.py  stylish.py
difference_calculator/scripts/: gendiff.py
difference_calculator/test/: __init__.py  test_comprasion.py
difference_calculator/test/fixtures/: right_answer.json
difference_calculator/tools/: __init__.py  argparse.py  comparison.py  diff.py  formater.py  gendiff.py  open_file.py  parsing_file.py  test_comprasion.py  to_parse.py
gendiff/: __init__.py
gendiff/formatters/: format_diff.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py
gendiff/tools/: argparse.py  diff.py  parse_file.py
package/scripts/: gendiff.py
package/tools/: gendiff.py
tests/: __init__.py  test_comprasion.py
tests/fixtures/: right_answer.json
